# brickhouse-brands-demo

./: .gitignore  .tool-versions  CODEOWNERS.txt  DATABASE_SETUP.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  deploy.sh  env.example  index.html  package-lock.json  setup-env.sh  start-dev.sh
backend/: README.md  copy-frontend.sh  env.example  main.py  requirements.txt  startup.py
backend/app/: __init__.py  auth.py  config.py  logging_config.py
backend/app/database/: connection.py
backend/app/models/: schemas.py
backend/app/routers/: inventory.py  orders.py  products.py  stores.py  users.py
backend/static/: index.html
backend/static/assets/: index-BfLqrQ1H.js  index-CFXZEHXl.css  index-CPQQkQzE.css  index-CcdRgHQ_.js  index-CjcZpsPO.js  index-Co39Mwdv.js  index-DaMZzWzu.css  index-JHxLKDaL.js  index-gGJIzMA5.js  index-mZJ6IY64.js
database/: README.md  demo_setup.py  sample_data.sql  schema.sql
frontend/: README.md  package-lock.json  package.json
src/api/config/: apiClient.ts
src/api/services/: inventoryService.ts  orderService.ts  productService.ts  userService.ts
src/api/types/: index.ts
src/components/dashboard/: InventoryCharts.tsx  KPICards.tsx
src/components/layout/: Navigation.tsx
src/components/orders/: ModifyOrderModal.tsx  OrderAnalyticsCards.tsx  (+4 more)
src/lib/: config.ts
src/pages/: Index.tsx
src/store/: useInventoryStore.ts  useOrderStore.ts  useProductStore.ts  useStoreStore.ts  useUserStore.ts
src/utils/: dateUtils.ts
traffic-simulator/: Cargo.toml  README.md  run_simulation.sh
traffic-simulator/src/: main.rs
(+3 files in other folders)
