[package]
name = "postgres-traffic-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
deadpool-postgres = "0.12"
futures = "0.3"
native-tls = "0.2"
postgres-native-tls = "0.5"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
